--- a/src/styles.css
+++ b/src/styles.css
@@ -32,7 +32,7 @@ h3 .temperature {
   border: 1px solid black;
   border-radius: 10px;
   margin: 20px auto;
-  padding: 50px;
+  padding: 50px 50px 0;
   max-width: 800px;
 }
 
@@ -53,6 +53,10 @@ ul {
 
 a {
   text-decoration: none;
+}
+
+.source {
+  text-align: center;
 }
 
 .current-location-button {
