--- a/src/styles.css
+++ b/src/styles.css
@@ -28,10 +28,15 @@ h3 .temperature {
   font-size: 90px;
 }
 
+.weather-app-wrapper {
+  max-width: 800px;
+  margin: 20px auto 40px;
+}
+
 .weather-app {
   border: 1px solid black;
   border-radius: 10px;
-  margin: 20px auto;
+  margin: 30px auto 20px;
   padding: 50px 50px 0;
   max-width: 800px;
 }
@@ -55,12 +60,38 @@ a {
   text-decoration: none;
 }
 
-.source {
-  text-align: center;
-}
-
 .current-location-button {
   border-radius: 20px;
+}
+
+.search-box {
+  padding-right: 0;
+}
+
+.submit-box {
+  padding-left: 0;
+  margin-right: 50px;
+}
+
+form .form-control:focus {
+  border-color: #ced4da;
+  box-shadow: none;
+}
+
+.search {
+  border: none;
+  border-top: 1.5px solid rgb(206, 212, 218);
+  border-left: 1.5px solid rgb(206, 212, 218);
+  border-bottom: 1.5px solid rgb(206, 212, 218);
+  border-radius: 4px 0px 0px 4px;
+}
+
+.submit {
+  border: none;
+  border-top: 1.5px solid rgb(206, 212, 218);
+  border-right: 1.5px solid rgb(206, 212, 218);
+  border-bottom: 1.5px solid rgb(206, 212, 218);
+  border-radius: 0px 4px 4px 0px;
 }
 
 .sun-icon {
