--- a/src/styles.css
+++ b/src/styles.css
@@ -25,7 +25,7 @@ h3 {
 
 h3 .temperature {
   color: #008891;
-  font-size: 60px;
+  font-size: 50px;
 }
 
 ul {
@@ -44,9 +44,30 @@ form .form-control:focus {
   box-shadow: none;
 }
 
-button:focus {
-  outline: none;
+current-location-button {
+  display: inline-block;
+  color: white;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  border-radius: 30px;
+  background-color: #008891;
+  border-color: #008891;
+  border: 1px solid transparent;
+  padding: 8px 12px;
+  font-size: 15px;
+  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
+  text-decoration: none;
+  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
+    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
+
+current-location-button:hover {
+  background-color: #00587a;
+  border: 1px solid transparent;
+  cursor: pointer;
+}
+
 .weather-app-wrapper {
   max-width: 800px;
   margin: 20px auto 40px;
@@ -88,30 +109,6 @@ button:focus {
   border-radius: 0px 4px 4px 0px;
 }
 
-current-location-button {
-  display: inline-block;
-  color: white;
-  font-weight: 400;
-  line-height: 1.5;
-  text-align: center;
-  border-radius: 30px;
-  background-color: #008891;
-  border-color: #008891;
-  border: 1px solid transparent;
-  padding: 8px 12px;
-  font-size: 15px;
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.2);
-  text-decoration: none;
-  transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out,
-    border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
-}
-
-current-location-button:hover {
-  background-color: #00587a;
-  border: 1px solid transparent;
-  cursor: pointer;
-}
-
 .today {
   margin: 60px 70px;
   font-size: 20px;
@@ -121,23 +118,28 @@ current-location-button:hover {
 }
 
 .sun-icon {
-  color: orange;
-  font-size: 20px;
+  color: yellow;
+  font-size: 30px;
 }
 
 .snowflake-icon {
-  color: turquoise;
-  font-size: 20px;
+  color: white;
+  font-size: 30px;
 }
 
 .cloud-sun-icon {
   color: lightslategray;
-  font-size: 20px;
+  font-size: 30px;
+}
+
+.current-cloud-sun-icon {
+  color: lightslategray;
+  font-size: 50px;
 }
 
 .rain-icon {
   color: darkblue;
-  font-size: 20px;
+  font-size: 30px;
 }
 
 .forecast {
