--- a/src/styles.css
+++ b/src/styles.css
@@ -11,11 +11,12 @@ h3 {
 }
 h1 {
   font-size: 30px;
-  margin: 70px 0 20px 0;
+  margin: 80px 0 20px 0;
 }
 
 h2 {
   font-size: 20px;
+  line-height: normal;
 }
 
 h3 {
@@ -24,7 +25,7 @@ h3 {
 }
 
 h3 .temperature {
-  color: #008891;
+  color: #ffe3de;
   font-size: 50px;
 }
 
@@ -51,8 +52,7 @@ current-location-button {
   line-height: 1.5;
   text-align: center;
   border-radius: 30px;
-  background-color: #008891;
-  border-color: #008891;
+  background-color: #0f3057;
   border: 1px solid transparent;
   padding: 8px 12px;
   font-size: 15px;
@@ -79,8 +79,8 @@ current-location-button:hover {
   margin: 30px auto;
   padding: 50px 50px 0;
   max-width: 800px;
-  background-image: url(https://i.pinimg.com/564x/7c/97/47/7c97471a1ecff173e7f241c9110ad029.jpg);
-  background-size: 800px;
+  background-image: url(https://images.creativemarket.com/0.1.0/ps/5272950/910/628/m2/fpnw/wm0/sunset-colors-%281%29-.jpg?1540691231&s=40e82e11ce05541d9382dd5c8a8b9fa1);
+  background-size: 1600px;
 }
 
 .search-box {
@@ -116,19 +116,15 @@ current-location-button:hover {
   text-align: center;
 }
 
-.forecast {
-  color: #0f3057;
-  font-weight: bold;
-  font-size: 25px;
-  margin: 30px 0px;
-}
-
-.days {
-  color: #0f3057;
-  font-size: 15px;
-  font-weight: bold;
+.hour-forecast-icon {
+  width: 90%;
 }
 
 .day-1 {
   border-top: 1.5px solid #00587a;
+  color: #0f3057;
+}
+
+.daily-forecast-icon {
+  padding: 0px 150px;
 }
