--- a/src/styles.css
+++ b/src/styles.css
@@ -77,7 +77,7 @@ current-location-button:hover {
   border: 1.5px solid #0f3057;
   border-radius: 10px;
   margin: 30px auto;
-  padding: 50px 50px 0;
+  padding: 50px;
   max-width: 800px;
   background-image: url(https://images.creativemarket.com/0.1.0/ps/5272950/910/628/m2/fpnw/wm0/sunset-colors-%281%29-.jpg?1540691231&s=40e82e11ce05541d9382dd5c8a8b9fa1);
   background-size: 1600px;
@@ -126,6 +126,7 @@ current-location-button:hover {
   padding-bottom: 20px;
   text-align: center;
   font-size: 17px;
+  color: #0f3057;
 }
 
 .day-2 {
@@ -135,6 +136,7 @@ current-location-button:hover {
   padding-bottom: 20px;
   text-align: center;
   font-size: 17px;
+  color: #0f3057;
 }
 
 .day-3 {
@@ -145,6 +147,7 @@ current-location-button:hover {
   padding-bottom: 20px;
   text-align: center;
   font-size: 17px;
+  color: #0f3057;
 }
 
 .daily-forecast-icon {
